# ruleit

./: Dockerfile  README.md  requirements.txt  setup.cfg
ruleit/: annotate.py  expansion.py  hash.py  lp_prune.py
server/: main.py
server/pages/: 01-build_rules.py  02-expand.py  03-prune.py  04-explore.py  05-map_smiles.py  06-network_compare.py  07-json2csv.py  08-stoichiometry.py
tests/: test_annotate.py  test_factory.py  test_prune.py
