[metadata]
name = ruleit
version = 0.0.0
author = Bruno Cuevas
author_email = brunocuevaszuviria@gmail.com
description = Rection expansion
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
where=ruleit  # . by default


python_requires = >=3.9
install_requires =
    click
    rdkit
    pyyaml
    networkx
    streamlit
    duckdb
    streamlit-agraph
    PuLP
    numpy==1.26.4
    matplotlib
    plotly
    scipy
    stqdm



include_package_data = True
[options.entry_points]
console_scripts =
    
